--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a fork of the amazing endless runner [Runfield](https://github.com/kig/runfield)!
+This is a fork of the amazing endless runner **Runfield**(https://github.com/kig/runfield)!
 
 Changes made
 -------------
